# rules_py

./: .bazelignore  .bazelrc  .bazelversion  .gitattributes  .gitignore  .pdm-python  .pre-commit-config.yaml  .typos.toml  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  Makefile  OpenAI.md  README.md  WINDOWS.md  WORKSPACE  annotations.toml  gazelle_python.yaml  internal_deps.bzl  internal_python_deps.bzl  pyproject.toml  renovate.json  requirements.in  requirements.txt  requirements_windows.txt  uv_install_wheel_src_wheel.patch  uv_trampoline_builder_src_lib.patch  v2.py
bazel/: BUILD.bazel  defaults.bazelrc  defs.bzl
bazel/include/: .e2e.MODULE.bazel.swp  cargo.MODULE.bazel  docs.MODULE.bazel  e2e.MODULE.bazel  llvm.MODULE.bazel  multitool.MODULE.bazel  musl.MODULE.bazel  oci.MODULE.bazel  python.MODULE.bazel  release.MODULE.bazel  rules-python.MODULE.bazel  rust.MODULE.bazel  telemetry.MODULE.bazel  test.MODULE.bazel  tools.MODULE.bazel
bazel/patches/: llvm_darwin_sysroot.patch  rules_cc_visibility.patch  rules_rust.patch  rules_rust_musl_sysroot.patch  toolchains_llvm.patch
bazel/proto/: MODULE.bazel
bazel/release/: BUILD.bazel  hashes.bzl  release.bzl
bazel/rust/: BUILD.bazel  README.md  defs.bzl  multi_platform_rust_binaries.bzl
benchmark/analysis/: .bazelrc  MODULE.bazel  MODULE.bazel.template  compare.py  generate_module.py
benchmark/startup/: BUILD.bazel  MODULE.bazel  MODULE.bazel.template  compare.py  generate_module.py  main.py  requirements.txt  syspath_probe.py
benchmark/workspace/: .bazelrc  .gitignore  MODULE.bazel.template  generate_module.py  generate_workspace.py  pyproject.toml
docs/: BUILD.bazel  getting-started-outline.md  interpreter.md  migrating.md  migrating_v1_v2.md  pex.md  pip.md  py_binary.md  py_image_layer.md  py_library.md  py_test.md  rules.md  test-drivers.md  uv-patching.md  uv.md  venv.md  virtual_deps.md
e2e/: .MODULE.bazel.swp  .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  log.txt
e2e/bazel/: defaults.bazelrc  defs.bzl  include  patches  platforms
e2e/bcr-simulation/: BUILD.bazel  MODULE.bazel  hello.py  test.sh
e2e/cases/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  test.sh
e2e/concurrent_venv/: BUILD.bazel  WORKSPACE.bazel  hello.py  test_concurrent.py
e2e/cross-repo-610/: BUILD.bazel  MODULE.bazel  test.py
e2e/interpreter-build-config/: .bazelignore  BUILD.bazel  MODULE.bazel  check_interpreter.py  test.sh
e2e/interpreter-input-validation/: .bazelignore  BUILD.bazel  MODULE.bazel  test.sh
e2e/interpreter-runtime-metadata/: BUILD.bazel  MODULE.bazel  marker_dependency_test.bzl  pyproject.toml  runtime_metadata_test.bzl  test.sh
e2e/interpreter-toolchain-settings/: BUILD.bazel  MODULE.bazel  marker_dependency_test.bzl  pyproject.toml  test.sh  toolchain_test.bzl
e2e/interpreter-version-541/: BUILD.bazel  MODULE.bazel  test.py
e2e/repository-rule-deps/: BUILD.bazel  MODULE.bazel  README.md  test.py
e2e/rules-proto-grpc-python/: .bazelrc  BUILD.bazel  MODULE.bazel  greeting.proto  test.py
e2e/rules-python-interop/: BUILD.bazel  MODULE.bazel  pip_deps_test.py  requirements.txt  shared_interpreter_test.py  uv_deps_test.py  venv_structure_test.py
e2e/smoke/: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod
e2e/snapshots/: abi3_compat.whl_install.cffi.BUILD.bazel  abi3_compat.whl_install.cryptography.BUILD.bazel  firebase_admin.test_tool.venv.pth  pbs_symlink_prefix_1048.python313.pyvenv.cfg  project_single.BUILD.bazel  project_single.private.sccs.BUILD.bazel  pth_install_tree_fallback.venv.pth  pth_install_tree_union.venv.pth  pth_namespace_547.test.venv.pth  pypi.cowsay.BUILD.bazel  pypi.dep_group.BUILD.bazel  pypi_bare_linux_wheels.grpcio.BUILD.bazel  pypi_multi.cowsay.BUILD.bazel  pypi_multi.defs.bzl  pypi_multi.dep_group.BUILD.bazel  pypi_rdflib_linux.dep_group.BUILD.bazel  pypi_single.cowsay.BUILD.bazel  pypi_single.defs.bzl  pypi_single.dep_group.BUILD.bazel  pypi_single.requirements.bzl  sdist_build.uv_sdist_fallback.cowsay.BUILD.bazel  sdist_build.uv_sdist_jdk_build.jpype1.BUILD.bazel  sdist_build.uv_sdist_native_annotation.cowsay.BUILD.bazel  sdist_build.uv_sdist_native_build.python_geohash.BUILD.bazel  wheel_root_pth.venv.pth  whl_install.azure_overlap.azure_core.BUILD.bazel  whl_install.azure_overlap.azure_core_tracing_opentelemetry.BUILD.bazel  whl_install.bare_linux_wheels.grpcio.BUILD.bazel
e2e/system-interpreter/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
e2e/tools/: BUILD.bazel  action_mnemonic_test.bzl  assert_absent.py  asserts.bzl
e2e/use_release/: .bazelrc  .coveragerc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  __init__.py  __main__.py  minimal_download_test.sh  my_test.py  requirements.txt  test.py
e2e/uv-deps/: MODULE.bazel  requirements.txt
e2e/uv_pip_compile/: BUILD.bazel  MODULE.bazel  defs.bzl  multitool.lock.json
gazelle/: BUILD.bazel  defs.bzl  go.mod
gazelle/manifest/: BUILD.bazel  manifest.go
gazelle/python/: BUILD.bazel  kinds.go
gazelle/pythonconfig/: BUILD.bazel
py/: BUILD.bazel  current_py_toolchain.bzl  defs.bzl  extensions.bzl  interpreter.bzl  proto.bzl  repositories.bzl  toolchains.bzl
py/entry_points/: BUILD.bazel  py_console_script_binary.bzl  py_console_script_gen.bzl  py_console_script_gen.py
py/private/: BUILD.bazel  aspect_py_info.bzl  aspect_py_info_compat.bzl  bin_to_lib.bzl  current_toolchain.bzl  entry.tmpl.sh  merge_repo_mappings.awk  modify_mtree.awk  modify_mtree_test.sh  mtree_preserve_symlinks.bzl  mypy.bzl  propagation.bzl  proto.bzl  providers.bzl  pth.bzl  py_binary.bzl  py_container_binary.bzl  py_container_image_layer.bzl  py_executable.bzl  py_image_layer.bzl  py_image_layer_cross.bzl  py_image_layer_validator.py  py_image_layer_validator_test.py  py_image_layers.bzl  py_info.bzl  py_info_interop.bzl  py_pex.bzl  (+31 more)
tools/: BUILD.bazel  buildifier.py  buildifier_test.py  gcc_toolchain.patch  integrity.bzl  lint.bzl  tools.lock.json  version.bzl
uv/: BUILD.bazel  defs.bzl  extension.bzl  extensions.bzl
(+1589 files in other folders)
