load("@aspect_gazelle_prebuilt//:def.bzl", "aspect_gazelle")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("//uv:defs.bzl", "gazelle_python_manifest")

# Gazelle manages the bzl_library graph for the public //py/... and //uv/...
# packages so release_prep.sh's starlark_doc_extract query has fresh deps.
# Other dirs (bazel/, examples/) hold internal/example code with no doc consumers.
# gazelle:exclude bazel
# gazelle:exclude examples
# gazelle:exclude py/tests
# uv/extensions.bzl transitively loads @bazel_tools http.bzl whose own
# transitive cache.bzl/utils.bzl loads have no bzl_library targets to declare,
# which breaks starlark_doc_extract validation. Skip it until @bazel_tools
# exposes those. See https://github.com/bazelbuild/bazel/issues/12444.
# gazelle:exclude uv/extensions.bzl
# Use aspect_bazel_lib's bzl_library, which auto-generates the
# starlark_doc_extract targets queried at release time.
# gazelle:map_kind bzl_library bzl_library @bazel_lib//:bzl_library.bzl

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    hub = "pypi",
    venvs = [
        "",
    ],
)

aspect_gazelle(
    name = "gazelle",
    languages = ["starlark"],
    with_check = True,
)

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
)

buildifier(
    name = "buildifier.check",
    # TODO: enable lint_mode = "warn" once existing warnings are fixed
    lint_mode = "",
    mode = "diff",
)

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)
