load("@aspect_gazelle_prebuilt//:def.bzl", "aspect_gazelle")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("//uv:defs.bzl", "gazelle_python_manifest")

# Gazelle manages the bzl_library graph for the public //py/... and //uv/...
# packages so release_prep.sh's starlark_doc_extract query has fresh deps.
# Other dirs (bazel/, examples/) hold internal/example code with no doc consumers.
# gazelle:exclude bazel
# gazelle:exclude examples
# gazelle:exclude py/tests

# Snapshot directories hold copies of generated repo-rule output checked
# in for diff_test regression coverage; they aren't real Starlark sources.
# gazelle:exclude uv/private/uv_hub/snapshots

# uv/extensions.bzl transitively loads @bazel_tools http.bzl whose own
# transitive cache.bzl/utils.bzl loads have no bzl_library targets to declare,
# which breaks starlark_doc_extract validation. Skip it until @bazel_tools
# exposes those. See https://github.com/bazelbuild/bazel/issues/12444.
# gazelle:exclude uv/extensions.bzl

# Use aspect_bazel_lib's bzl_library, which auto-generates the
# starlark_doc_extract targets queried at release time.
# gazelle:map_kind bzl_library bzl_library @bazel_lib//:bzl_library.bzl

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    hub = "pypi",
    venvs = [
        "aspect_rules_py",
    ],
)

aspect_gazelle(
    name = "gazelle",
    languages = ["starlark"],
    with_check = True,
)

# Snapshot directories hold copies of generated repo-rule output and aren't
# real Starlark sources — see .gitattributes / //uv/private/uv_hub:snapshots.
_BUILDIFIER_EXCLUDES = [
    "./uv/private/uv_hub/snapshots/*",
    "./e2e/snapshots/*",
]

buildifier(
    name = "buildifier",
    exclude_patterns = _BUILDIFIER_EXCLUDES,
    lint_mode = "fix",
    mode = "fix",
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = _BUILDIFIER_EXCLUDES,
    # TODO: enable lint_mode = "warn" once existing warnings are fixed
    lint_mode = "",
    mode = "diff",
)

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)
