load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("//uv:defs.bzl", "gazelle_python_manifest")

# Gazelle manages the bzl_library graph for the public //py/... and //uv/...
# packages so release_prep.sh's starlark_doc_extract query has fresh deps.
# Other dirs (bazel/, examples/) hold internal/example code with no doc consumers.
# gazelle:exclude bazel
# gazelle:exclude examples
# gazelle:exclude py/tests

# Snapshot directories hold copies of generated repo-rule output checked
# in for diff_test regression coverage; they aren't real Starlark sources.
# gazelle:exclude uv/private/uv_hub/snapshots

# uv/extensions.bzl transitively loads @bazel_tools http.bzl whose own
# transitive cache.bzl/utils.bzl loads have no bzl_library targets to declare,
# which breaks starlark_doc_extract validation. Skip it until @bazel_tools
# exposes those. See https://github.com/bazelbuild/bazel/issues/12444.
# gazelle:exclude uv/extensions.bzl

# Use aspect_bazel_lib's bzl_library, which auto-generates the
# starlark_doc_extract targets queried at release time.
# gazelle:map_kind bzl_library bzl_library @bazel_lib//:bzl_library.bzl

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    hub = "pypi",
    venvs = [
        "",
    ],
)

alias(
    name = "gazelle",
    actual = "//tools/gazelle",
)

alias(
    name = "buildifier",
    actual = "@buildifier_prebuilt//buildifier",
)

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)

# Regression test: a package whose lockfile entry has both an sdist *and* a
# `-none-any.whl` must still emit a `sdist_build__*` repo so the source-build
# fallback is available for overrides, no-binary settings, and incomplete
# wheel coverage. bravado 11.0.3 ships both shapes and is in the root lock;
# building its `:whl` exercises the fallback the extension must preserve.
build_test(
    name = "sdist_fallback_with_anyarch_wheel_build_test",
    targets = ["@sdist_build__aspect_rules_py__bravado__11_0_3//:whl"],
)
