[workspace]
resolver = "2"
members = [
    "py/tools/py",
    "py/tools/venv_bin",
    "py/tools/unpack_bin",
    "py/tools/venv_shim",
    "py/tools/runfiles",
]

[workspace.package]
version = "0.1.0"
categories = ["development-tools"]
homepage = "https://github.com/aspect-build/rules_py"
repository = "https://github.com/aspect-build/rules_py"
license = "Apache 2"
edition = "2021"
readme = "README.md"
rust-version = "1.88.0"

[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
miette = { version = "7.2", features = ["fancy"] }
tempfile = "3.13.0"
thiserror = "1.0.64"
uv-cache = { git = "https://github.com/astral-sh/uv", rev = "e28dc623582403fb4604a02f125433342722e80e" }
uv-distribution-filename = { git = "https://github.com/astral-sh/uv", rev = "e28dc623582403fb4604a02f125433342722e80e" }
uv-extract = { git = "https://github.com/astral-sh/uv", rev = "e28dc623582403fb4604a02f125433342722e80e" }
uv-install-wheel = { git = "https://github.com/astral-sh/uv", rev = "e28dc623582403fb4604a02f125433342722e80e" }
uv-pypi-types = { git = "https://github.com/astral-sh/uv", rev = "e28dc623582403fb4604a02f125433342722e80e" }
uv-python = { git = "https://github.com/astral-sh/uv", rev = "e28dc623582403fb4604a02f125433342722e80e" }
uv-trampoline = { git = "https://github.com/astral-sh/uv", rev = "e28dc623582403fb4604a02f125433342722e80e" }
uv-version = { git = "https://github.com/astral-sh/uv", rev = "e28dc623582403fb4604a02f125433342722e80e" }
uv-virtualenv = { git = "https://github.com/astral-sh/uv", rev = "e28dc623582403fb4604a02f125433342722e80e" }

[patch.crates-io]
reqwest-middleware = { git = "https://github.com/astral-sh/reqwest-middleware", rev = "7650ed76215a962a96d94a79be71c27bffde7ab2" }
reqwest-retry = { git = "https://github.com/astral-sh/reqwest-middleware", rev = "7650ed76215a962a96d94a79be71c27bffde7ab2" }

[profile.release]
strip = true
