[workspace]
resolver = "2"
members = [
    "py/tools/py",
    "py/tools/venv_bin",
    "py/tools/unpack_bin",
    "py/tools/venv_shim",
    "py/tools/runfiles",
]

[workspace.package]
version = "0.1.0"
categories = ["development-tools"]
homepage = "https://github.com/aspect-build/rules_py"
repository = "https://github.com/aspect-build/rules_py"
license = "Apache 2"
edition = "2021"
readme = "README.md"
rust-version = "1.81.0"

[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
fs-err = "3.3.0"
itertools = "0.13.0"
miette = { version = "7.2", features = ["fancy"] }
tempfile = "3.13.0"
thiserror = "1.0.64"
uv-cache = { git = "https://github.com/astral-sh/uv", rev = "00d72dac7b789d1c64ed21626175b80f4a1b8f2b" }
uv-distribution-filename = { git = "https://github.com/astral-sh/uv", rev = "00d72dac7b789d1c64ed21626175b80f4a1b8f2b" }
uv-extract = { git = "https://github.com/astral-sh/uv", rev = "00d72dac7b789d1c64ed21626175b80f4a1b8f2b" }
uv-install-wheel = { git = "https://github.com/astral-sh/uv", rev = "00d72dac7b789d1c64ed21626175b80f4a1b8f2b" }
uv-pypi-types = { git = "https://github.com/astral-sh/uv", rev = "00d72dac7b789d1c64ed21626175b80f4a1b8f2b" }
uv-python = { git = "https://github.com/astral-sh/uv", rev = "00d72dac7b789d1c64ed21626175b80f4a1b8f2b" }
uv-virtualenv = { git = "https://github.com/astral-sh/uv", rev = "00d72dac7b789d1c64ed21626175b80f4a1b8f2b" }

[profile.release]
strip = true
