"aspect-build/rules_py"

module(
    name = "aspect_rules_py",
    compatibility_level = 1,
)

# Lower-bound versions of direct dependencies.
# When bumping, add a comment explaining what's required from the newer release.

# py_image_layer requires 2.x for the `tar` rule.
# py_image_layer needs compute_unused_inputs attribute
# py_image_layer needs repo_mapping fix.
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.2.0")

include("//bazel/include:bazel-lib.MODULE.bazel")
include("//bazel/include:llvm.MODULE.bazel")
include("//bazel/include:musl.MODULE.bazel")
include("//bazel/include:oci.MODULE.bazel")
include("//bazel/include:rust.MODULE.bazel")
include("//bazel/include:telemetry.MODULE.bazel")
include("//bazel/include:rules-python.MODULE.bazel")
include("//bazel/include:release.MODULE.bazel")

tools = use_extension("//py:extensions.bzl", "py_tools")
tools.rules_py_tools()
use_repo(tools, "rules_py_tools")
use_repo(tools, "rules_py_pex_2_3_1")

register_toolchains(
    "@rules_py_tools//:all",

    # Register the "from source" toolchains last, so there's no accidental dependency on Rust
    # For manual testing: comment these out to force use of pre-built binaries.
    "@aspect_rules_py//py/private/toolchain/venv/...",
    "@aspect_rules_py//py/private/toolchain/unpack/...",
    "@aspect_rules_py//py/private/toolchain/shim/...",
)

bazel_dep(
    name = "gazelle",
    version = "0.45.0",
    dev_dependency = True,
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.0.2",
    dev_dependency = True,
)
