"aspect-build/rules_py"

module(
    name = "aspect_rules_py",
    compatibility_level = 1,
)

# NOTE: when publishing to BCR, we patch this to True, as we publish pre-built binaries along with our releases.
IS_RELEASE = False

bazel_dep(name = "bazel_features", version = "1.38.0")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# TODO: when bumping to 1.9.0+, replace py/private/exec_tools/defs.bzl with
# rules_python's public py_exec_tools_toolchain and PyExecToolsInfo, and switch
# EXEC_TOOLS_TOOLCHAIN back to @rules_python//python:exec_tools_toolchain_type.
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "tar.bzl", version = "0.5.5")
bazel_dep(name = "with_cfg.bzl", version = "0.14.1")

bazel_lib_toolchains = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains")
use_repo(bazel_lib_toolchains, "bsd_tar_toolchains")

tools = use_extension("//py:extensions.bzl", "py_tools")
tools.rules_py_tools()
use_repo(tools, "rules_py_tools")
use_repo(tools, "rules_py_pex_2_3_1")

register_toolchains(
    "@rules_py_tools//:all",
)

register_toolchains(
    "@aspect_rules_py//py/private/toolchain/...",
    dev_dependency = IS_RELEASE,
)

toml = use_extension("//uv/private/tomltool:extension.bzl", "tomltool")
use_repo(
    toml,
    "toml2json_aarch64_linux_gnu",
    "toml2json_aarch64_osx_libsystem",
    "toml2json_x86_64_linux_gnu",
    "toml2json_x86_64_osx_libsystem",
)

host = use_extension("//uv/private/host:extension.bzl", "host_platform")
use_repo(host, "aspect_rules_py_uv_host")

# PBS interpreters — used at repo-rule time for sdist inspection (needs >= 3.11
# for tomllib) and available as build-time toolchains.
interpreters = use_extension("//py:extensions.bzl", "python_interpreters")
interpreters.configure(
    releases = [
        "20260303",
        "20251031",
    ],
)
interpreters.toolchain(
    python_version = "3.13",
)
use_repo(
    interpreters,
    "python_interpreters",
    # Individual platform repos — must be visible so the uv extension can
    # reference the host interpreter for sdist configure tooling.
    "python_3_13_aarch64_apple_darwin",
    "python_3_13_aarch64_unknown_linux_gnu",
    "python_3_13_aarch64_unknown_linux_musl",
    "python_3_13_i686_pc_windows_msvc",
    "python_3_13_x86_64_apple_darwin",
    "python_3_13_x86_64_pc_windows_msvc",
    "python_3_13_x86_64_unknown_linux_gnu",
    "python_3_13_x86_64_unknown_linux_musl",
)

register_toolchains("@python_interpreters//:all")

bazel_dep(name = "aspect_tools_telemetry", version = "0.3.3")

tel = use_extension("@aspect_tools_telemetry//:extension.bzl", "telemetry")
use_repo(tel, "aspect_tools_telemetry_report")

################################################################################
# Dev deps are the remainder of the file

# LLVM configuration
bazel_dep(name = "llvm", version = "0.7.0", dev_dependency = IS_RELEASE)

register_toolchains(
    "@llvm//toolchain:all",
    dev_dependency = IS_RELEASE,
)

# Rust configuration
bazel_dep(name = "rules_rust", version = "0.68.1", dev_dependency = IS_RELEASE)

rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
    dev_dependency = IS_RELEASE,
)
rust.toolchain(
    edition = "2024",
    extra_target_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-musl",
    ],
    versions = ["1.88.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
    dev_dependency = IS_RELEASE,
)

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)

bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = IS_RELEASE)
bazel_dep(name = "bazel_env.bzl", version = "0.5.0", dev_dependency = IS_RELEASE)
bazel_dep(name = "bzip2", version = "1.0.8.bcr.3", dev_dependency = IS_RELEASE)
bazel_dep(name = "gazelle", version = "0.47.0", dev_dependency = IS_RELEASE)
bazel_dep(name = "rules_go", version = "0.60.0", dev_dependency = IS_RELEASE)
bazel_dep(name = "rules_rs", version = "0.0.26", dev_dependency = IS_RELEASE)
bazel_dep(name = "xz", version = "5.4.5.bcr.7", dev_dependency = IS_RELEASE)
bazel_dep(name = "zstd", version = "1.5.7", dev_dependency = IS_RELEASE)
bazel_dep(name = "rules_multitool", version = "1.9.0", dev_dependency = IS_RELEASE)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool", dev_dependency = IS_RELEASE)
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

crate = use_extension(
    "@rules_rs//rs:extensions.bzl",
    "crate",
    dev_dependency = IS_RELEASE,
)
crate.from_cargo(
    name = "aspect_rules_py__crates",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-musl",
        "x86_64-apple-darwin",
        "x86_64-unknown-linux-musl",
    ],
)
crate.annotation(
    crate = "backtrace",
    # This just compiles code on Android, we don't need it.
    gen_build_script = "off",
    repositories = ["aspect_rules_py__crates"],
)
crate.annotation(
    crate = "zstd-sys",
    # This build script is naughty and tries to depend on system zstd or build it from source.
    gen_build_script = "off",
    repositories = ["aspect_rules_py__crates"],
    deps = ["@@zstd+//:zstd"],
)
crate.annotation(
    crate = "bzip2-sys",
    gen_build_script = "off",
    repositories = ["aspect_rules_py__crates"],
    deps = ["@@bzip2+//:bz2"],
)
crate.annotation(
    crate = "lzma-sys",
    gen_build_script = "off",
    repositories = ["aspect_rules_py__crates"],
    deps = ["@@xz+//:lzma"],
)
use_repo(crate, "aspect_rules_py__crates")

# TODO: Replace with bazel_features?
# cf. https://github.com/bazel-contrib/bazelrc-preset.bzl/blob/main/MODULE.bazel#L8C1-L10C70

version = use_extension("@bazel_features//private:extensions.bzl", "version_extension", dev_dependency = IS_RELEASE)
use_repo(version, "bazel_features_globals", "bazel_features_version")

# rules_oci and friends

# rules_python and friends
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.0.0", dev_dependency = IS_RELEASE)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = IS_RELEASE)
python.toolchain(
    is_default = True,
    python_version = "3.9",
)
python.toolchain(
    is_default = False,
    python_version = "3.12",
)



# For everything else, we use our own uv machinery
uv = use_extension("//uv:extension.bzl", "uv", dev_dependency = IS_RELEASE)
uv.declare_hub(
    hub_name = "pypi",
)
uv.project(
    name = "aspect_rules_py",
    default_build_dependencies = [
        "build",
        "setuptools",
        "maturin",
    ],
    hub_name = "pypi",
    lock = "//:uv.lock",
    pyproject = "//:pyproject.toml",
    python_version = "3.13",
)
uv.unstable_annotate_packages(
    src = "//:annotations.toml",
    lock = "//:uv.lock",
)
use_repo(uv, "pypi")


