[project]
name = "aspect_rules_py"
version = "0.0.0"
authors = []
requires-python = ">=3.9, <3.12"
dependencies = [
   "setuptools",
   "build",
   "django~=4.2.7",
   "colorama~=0.4.0",
   "click",
   "pytest",
   "coverage",
   "cowsay",
   "pkg",
   "snakesay",
   "ftfy==6.2.0",
   "neptune==1.10.2",
   "six",
   "bazel-runfiles",
   "maturin",
]

[tool.uv]
dev-dependencies = [
   "pex==2.3.1",
   "pyright==1.1.411",
   "ruff==0.15.22",
   "ty==0.0.61",
]

[tool.ruff]
target-version = "py39"
extend-exclude = [
   # OCI layer snapshots pin the byte sizes of these fixtures.
   "e2e/cases/oci/py_image_layer/branding/**",
   "py/tests/internal-deps/adder/**",
   # Vendored fixtures intentionally preserve their upstream source.
   "**/third_party/**",
]

[tool.ruff.lint]
select = [
   "ANN001",
   "ANN002",
   "ANN003",
   "ANN201",
   "ANN202",
   "ANN204",
   "ANN205",
   "ANN206",
]

[tool.pyright]
typeCheckingMode = "standard"
extraPaths = ["py/private/pytest_shard"]

[tool.ty.environment]
extra-paths = ["py/private/pytest_shard"]

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"

# bravado-core 6.1.1. doesn't have a wheel, need to build it. Mark explicitly
# that we need setuptools and build in order to do so; build being the
# standard build tool driver.
[tool.uv.extra-build-dependencies]
bravado-core = [
   "build",
   "setuptools",
]
