[project]
name = "aspect_rules_py"
version = "0.0.0"
authors = []
requires-python = ">=3.9, <3.12"
dependencies = [
   "setuptools",
   "build",
   "django~=4.2.7",
   "colorama~=0.4.0",
   "click",
   "pytest",
   "coverage",
   "cowsay",
   "pkg",
   "snakesay",
   "ftfy==6.2.0",
   "neptune==1.10.2",
   "six",
   "bazel-runfiles",
   "maturin",
]

[tool.uv]
dev-dependencies = [
   "pex==2.3.1",
   "pyright[nodejs]==1.1.411",
   "ruff==0.15.22",
   "ty==0.0.61",
]

[tool.ruff]
target-version = "py39"
extend-exclude = [
   "**/third_party/**",
   "examples/virtual_deps/cowsnake/cowsay.py",
   "e2e/cases/cross-repo-610/subrepo_a",
   "e2e/cases/cross-repo-610/subrepo_b",
   "e2e/cases/hermetic-launcher-1116/hello.py",
   "e2e/cases/oci/py_image_layer/branding",
   "e2e/cases/oci/py_image_layer/server.py",
   "e2e/cases/oci/validator-exec-config/app.py",
   "e2e/cases/pex-interpreter-exclusion/app.py",
   "e2e/cases/pth-install-tree-fallback/a",
   "e2e/cases/pth-install-tree-fallback/b",
   "e2e/cases/py-library-defaultinfo-891/leaf.py",
   "e2e/cases/py-library-defaultinfo-891/mid.py",
   "e2e/cases/pytest-subdir-imports/lib.py",
   "e2e/cases/repository-rule-deps-299/direct",
   "e2e/cases/repository-rule-deps-299/imported",
   "e2e/cases/repository-rule-deps-299/toplevel",
   "e2e/cases/uv-workspace-789/packages",
   "e2e/cases/venv-conflict-608/app.py",
   "py/private/py_venv/tests/main.py",
   "py/tests/console-scripts/dotted_entry",
   "py/tests/external-deps/custom-macro",
   "py/tests/external-deps/lib.py",
   "py/tests/internal-deps/adder",
   "py/tests/internal-deps/pi.py",
   "py/tests/internal-deps/sub.py",
   "py/tests/main.py",
   "py/tests/py-pex-binary/noop.py",
   "py/tests/py-venv-multi-exec/shared_lib.py",
   "py/tests/py-venv-standalone-interpreter/ex.py",
   "py/tests/py_venv_conflict/a",
   "py/tests/py_venv_conflict/b",
   "py/tests/py_venv_conflict/lib.py",
   "py/tests/repo_relative_imports/lib",
   "py/tests/reset-data-edges/main.py",
   "py/tests/virtual/django/proj",
   "py/tests/wheel-root-pth-double/a",
   "py/tests/wheel-root-pth-double/b",
]

[tool.ruff.lint]
select = [
   "ANN001",
   "ANN002",
   "ANN003",
   "ANN201",
   "ANN202",
   "ANN204",
   "ANN205",
   "ANN206",
]

[tool.pyright]
typeCheckingMode = "standard"
extraPaths = ["py/private/pytest_shard"]

[tool.ty.environment]
extra-paths = ["py/private/pytest_shard"]

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"
