load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazelrc-preset.bzl", "bazelrc_preset")

exports_files(["defs.bzl"])

bazelrc_preset(
    name = "defaults",
    # Note that we're clobbering the Bazel version part of the normal URL
    # template so that we don't generate a diff test that fails when we
    # USE_BAZEL_VERSION for testing.
    doc_link_template = "https://registry.build/flag/bazel?filter={flag}",
    strict = True,
    # The output is specific to the version in .bazelversion
    tags = [
        "skip-on-bazel7",
        "skip-on-bazel9",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_features_version//:version",
        "@bazel_skylib//lib:versions",
    ],
)
