# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "rules",
    bzl_library_target = "//py:defs",
)

stardoc_with_diff_test(
    name = "py_library",
    bzl_library_target = "//py/private:py_library",
)

stardoc_with_diff_test(
    name = "py_binary",
    bzl_library_target = "//py/private:py_binary",
)

update_docs(name = "update")
