# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "py_library",
    bzl_library_target = "//py/private:py_library",
)

stardoc_with_diff_test(
    name = "py_binary",
    bzl_library_target = "//py:defs",
    symbol_names = [
        "py_binary",
        "py_binary_rule",
    ],
)

stardoc_with_diff_test(
    name = "py_test",
    bzl_library_target = "//py:defs",
    symbol_names = [
        "py_test",
        "py_test_rule",
        "py_pytest_main",
    ],
)

stardoc_with_diff_test(
    name = "pex",
    bzl_library_target = "//py/private:py_pex_binary",
)

stardoc_with_diff_test(
    name = "py_image_layer",
    bzl_library_target = "//py:defs",
    symbol_names = [
        "py_image_layer",
    ],
)

stardoc_with_diff_test(
    name = "venv",
    bzl_library_target = "//py/private:py_venv",
)

update_docs(name = "update")
